--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
       fail-fast: false
       matrix:
         target: [win64]
-        variant: [gpl 4.4]        
+        variant: [gpl 4.4,lgpl 4.4]        
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -127,7 +127,7 @@ jobs:
       fail-fast: false
       matrix:
         target: [win64]
-        variant: [gpl 4.4]
+        variant: [gpl 4.4,lgpl 4.4]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
