--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win64]
+        target: [win32]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -86,8 +86,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win64]
-        variant: [gpl 4.4, lgpl 4.4]        
+        target: [win32]
+        variant: [gpl 4.4]        
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -126,8 +126,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [win64]
-        variant: [gpl 4.4, lgpl 4.4]
+        target: [win32]
+        variant: [gpl 4.4]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
